[GTK] Missing symbols exported in 2.19.4 https://bugs.webkit.org/show_bug.cgi?id=181433

Reviewed by Michael Catanzaro.

Add missing WEBKIT_API to webkit_dom_dom_window_webkit_message_handlers_post_message().

* WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDOMWindow.h:
* webkitglib-symbols.map: Remove webkit_media_player_debug from local.

Canonical link: https://commits.webkit.org/197289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226633 268f45cc-cd09-0410-ab3c-d52691b4dbfc